# cpp-project

./: Weather App.sln
Weather App/: CMakeLists.txt  FavoriteCities.cpp  FavoriteCities.h  ThreadPool.cpp  ThreadPool.h  Weather App.vcxproj  Weather App.vcxproj.filters  WeatherAPI.cpp  WeatherAPI.h  WeatherApp.cpp  WeatherApp.h  WeatherData.cpp  WeatherData.h  api_key.txt  favorites.txt  imgui.ini  main.cpp  weather_cache.txt
Weather App/x64/Debug/: Weather App.exe.recipe  vc143.idb
Weather App/x64/Debug/Weather App.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Weather App.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
